--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -1,19 +1,19 @@
 development:
-  adapter: mysql
+  adapter: mysql2
   database: masasx_development
   username: root
   password: root
   pool: 5
 
 test: &test
-  adapter: mysql
+  adapter: mysql2
   database: masasx_test
   username: root
   password: root
   pool: 5
 
 production: &production
-  adapter: mysql
+  adapter: mysql2
   database: masasx_production
   username: root
   password: root
