--- a/spec/cassettes/primary_admin.yml
+++ b/spec/cassettes/primary_admin.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: post
-    uri: https://ois.cloop.co/masas/contacts
+    uri: https://ois.continuumloop.com/masas/contacts/
     body:
       encoding: UTF-8
       string: ! '{"firstName":"Jevin","lastName":"Maltais","title":"President","language":"en","email":"jevin@quickjack.ca","office-phone":"613-265-5389"}'
@@ -19,19 +19,51 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Wed, 24 Jul 2013 19:48:47 GMT
+      - Wed, 28 Aug 2013 15:09:03 GMT
       Server:
       - Apache/2.2.15 (CentOS)
       Content-Length:
-      - '70'
+      - '53'
       Connection:
       - close
       Content-Type:
       - application/json
     body:
       encoding: US-ASCII
-      string: ! '{"MasasUUID": "0e23b0c8-f49a-11e2-97fb-0401041e8a01", "success":
-        true}'
+      string: ! '{"MasasUUID": "c6ad4fea-0ff3-11e3-8763-0401041e8a01"}'
     http_version: 
-  recorded_at: Wed, 24 Jul 2013 19:48:48 GMT
+  recorded_at: Wed, 28 Aug 2013 15:09:06 GMT
+- request:
+    method: post
+    uri: https://ois.continuumloop.com/masas/contacts/
+    body:
+      encoding: UTF-8
+      string: ! '{"firstName":"Jevin","lastName":"Maltais","title":"President","language":"en","email":"email_9@example.com","office-phone":"613-265-5389"}'
+    headers:
+      Content-Type:
+      - application/json
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Wed, 28 Aug 2013 21:06:13 GMT
+      Server:
+      - Apache/2.2.15 (CentOS)
+      Content-Length:
+      - '53'
+      Connection:
+      - close
+      Content-Type:
+      - application/json
+    body:
+      encoding: US-ASCII
+      string: ! '{"MasasUUID": "ac24fbb4-1025-11e3-9097-0401041e8a01"}'
+    http_version: 
+  recorded_at: Wed, 28 Aug 2013 21:06:15 GMT
 recorded_with: VCR 2.2.5
