--- a/spec/cassettes/primary_admin.yml
+++ b/spec/cassettes/primary_admin.yml
@@ -5,39 +5,6 @@ http_interactions:
     uri: https://ois.continuumloop.com/masas/contacts/
     body:
       encoding: UTF-8
-      string: ! '{"firstName":"Jevin","lastName":"Maltais","title":"President","language":"en","email":"jevin@quickjack.ca","office-phone":"613-265-5389"}'
-    headers:
-      Content-Type:
-      - application/json
-      Accept:
-      - ! '*/*'
-      User-Agent:
-      - Ruby
-  response:
-    status:
-      code: 200
-      message: OK
-    headers:
-      Date:
-      - Wed, 28 Aug 2013 15:09:03 GMT
-      Server:
-      - Apache/2.2.15 (CentOS)
-      Content-Length:
-      - '53'
-      Connection:
-      - close
-      Content-Type:
-      - application/json
-    body:
-      encoding: US-ASCII
-      string: ! '{"MasasUUID": "c6ad4fea-0ff3-11e3-8763-0401041e8a01"}'
-    http_version: 
-  recorded_at: Wed, 28 Aug 2013 15:09:06 GMT
-- request:
-    method: post
-    uri: https://ois.continuumloop.com/masas/contacts/
-    body:
-      encoding: UTF-8
       string: ! '{"firstName":"Jevin","lastName":"Maltais","title":"President","language":"en","email":"email_9@example.com","office-phone":"613-265-5389"}'
     headers:
       Content-Type:
@@ -52,7 +19,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Wed, 28 Aug 2013 21:06:13 GMT
+      - Thu, 12 Sep 2013 12:44:34 GMT
       Server:
       - Apache/2.2.15 (CentOS)
       Content-Length:
@@ -63,7 +30,73 @@ http_interactions:
       - application/json
     body:
       encoding: US-ASCII
-      string: ! '{"MasasUUID": "ac24fbb4-1025-11e3-9097-0401041e8a01"}'
+      string: ! '{"MasasUUID": "13c71106-1ba9-11e3-99e7-0401041e8a01"}'
     http_version: 
-  recorded_at: Wed, 28 Aug 2013 21:06:15 GMT
+  recorded_at: Thu, 12 Sep 2013 12:44:38 GMT
+- request:
+    method: post
+    uri: https://ois.continuumloop.com/masas/contacts/
+    body:
+      encoding: UTF-8
+      string: ! '{"firstName":"Jevin","lastName":"Maltais","title":"President","language":"en","email":"email_33@example.com","office-phone":"613-265-5389"}'
+    headers:
+      Content-Type:
+      - application/json
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Thu, 12 Sep 2013 12:44:37 GMT
+      Server:
+      - Apache/2.2.15 (CentOS)
+      Content-Length:
+      - '53'
+      Connection:
+      - close
+      Content-Type:
+      - application/json
+    body:
+      encoding: US-ASCII
+      string: ! '{"MasasUUID": "1562bb8c-1ba9-11e3-b9de-0401041e8a01"}'
+    http_version: 
+  recorded_at: Thu, 12 Sep 2013 12:44:41 GMT
+- request:
+    method: post
+    uri: https://ois.continuumloop.com/masas/contacts/
+    body:
+      encoding: UTF-8
+      string: ! '{"firstName":"Jevin","lastName":"Maltais","title":"President","language":"en","email":"email_23@example.com","office-phone":"613-265-5389"}'
+    headers:
+      Content-Type:
+      - application/json
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Thu, 12 Sep 2013 12:54:21 GMT
+      Server:
+      - Apache/2.2.15 (CentOS)
+      Content-Length:
+      - '53'
+      Connection:
+      - close
+      Content-Type:
+      - application/json
+    body:
+      encoding: US-ASCII
+      string: ! '{"MasasUUID": "719bc53c-1baa-11e3-927c-0401041e8a01"}'
+    http_version: 
+  recorded_at: Thu, 12 Sep 2013 12:54:26 GMT
 recorded_with: VCR 2.2.5
