--- a/spec/cassettes/organization.yml
+++ b/spec/cassettes/organization.yml
@@ -5,7 +5,7 @@ http_interactions:
     uri: https://ois.continuumloop.com/masas/contacts/
     body:
       encoding: UTF-8
-      string: ! '{"firstName":"Jevin","lastName":"Maltais","title":"President","language":"en","email":"email_10@example.com","office-phone":"613-265-5389"}'
+      string: ! '{"firstName":"Jevin","lastName":"Maltais111","title":"President","language":"en","email":"email_4@example.com","office-phone":"613-265-5389"}'
     headers:
       Content-Type:
       - application/json
@@ -19,7 +19,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Fri, 13 Sep 2013 14:44:59 GMT
+      - Thu, 26 Sep 2013 18:50:00 GMT
       Server:
       - Apache/2.2.15 (CentOS)
       Content-Length:
@@ -30,15 +30,15 @@ http_interactions:
       - application/json
     body:
       encoding: US-ASCII
-      string: ! '{"MasasUUID": "10df3b28-1c83-11e3-890b-0401041e8a01"}'
+      string: ! '{"MasasUUID": "72327b34-26dc-11e3-a5b8-0401041e8a01"}'
     http_version: 
-  recorded_at: Fri, 13 Sep 2013 14:45:01 GMT
+  recorded_at: Thu, 26 Sep 2013 18:50:15 GMT
 - request:
     method: post
     uri: https://ois.continuumloop.com/masas/contacts/
     body:
       encoding: UTF-8
-      string: ! '{"firstName":"My","lastName":"Backup","title":"President","language":"en","email":"email_11@example.com","office-phone":"613-265-5389"}'
+      string: ! '{"firstName":"My 123","lastName":"Backup111","title":"President","language":"en","email":"email_5@example.com","office-phone":"613-265-5389"}'
     headers:
       Content-Type:
       - application/json
@@ -52,7 +52,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Fri, 13 Sep 2013 14:45:00 GMT
+      - Thu, 26 Sep 2013 18:50:00 GMT
       Server:
       - Apache/2.2.15 (CentOS)
       Content-Length:
@@ -63,15 +63,15 @@ http_interactions:
       - application/json
     body:
       encoding: US-ASCII
-      string: ! '{"MasasUUID": "11312082-1c83-11e3-8021-0401041e8a01"}'
+      string: ! '{"MasasUUID": "726fe9f6-26dc-11e3-931c-0401041e8a01"}'
     http_version: 
-  recorded_at: Fri, 13 Sep 2013 14:45:02 GMT
+  recorded_at: Thu, 26 Sep 2013 18:50:15 GMT
 - request:
     method: post
     uri: https://ois.continuumloop.com/masas/contacts/
     body:
       encoding: UTF-8
-      string: ! '{"firstName":"Someone","lastName":"Important","title":"President","language":"en","email":"email_12@example.com","office-phone":"613-265-5389"}'
+      string: ! '{"firstName":"Someone 1234","lastName":"Important111","title":"President","language":"en","email":"email_6@example.com","office-phone":"613-265-5389"}'
     headers:
       Content-Type:
       - application/json
@@ -85,7 +85,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Fri, 13 Sep 2013 14:45:00 GMT
+      - Thu, 26 Sep 2013 18:50:00 GMT
       Server:
       - Apache/2.2.15 (CentOS)
       Content-Length:
@@ -96,16 +96,16 @@ http_interactions:
       - application/json
     body:
       encoding: US-ASCII
-      string: ! '{"MasasUUID": "116d27f8-1c83-11e3-8623-0401041e8a01"}'
+      string: ! '{"MasasUUID": "72ad3266-26dc-11e3-a3d6-0401041e8a01"}'
     http_version: 
-  recorded_at: Fri, 13 Sep 2013 14:45:02 GMT
+  recorded_at: Thu, 26 Sep 2013 18:50:16 GMT
 - request:
     method: post
     uri: https://ois.continuumloop.com/masas/organizations/
     body:
       encoding: UTF-8
-      string: ! '{"OrgName":"Awesome organization","address-line1":"Nowhere 42","province-state":"Ontario","country":"CA","postal-code":"K1J
-        1A6","PrimaryContactURI":"10df3b28-1c83-11e3-890b-0401041e8a01","SecondaryContactURI":"11312082-1c83-11e3-8021-0401041e8a01","ExecutiveContactURI":"10df3b28-1c83-11e3-890b-0401041e8a01","AdminAccount":{"UserName":"jmaltais","ContactURI":"10df3b28-1c83-11e3-890b-0401041e8a01","Password":"somestaticpasswd","AccessCode":"somestaticaccesscode"}}'
+      string: ! '{"OrgName":"Awesome organization 111","address-line1":"Nowhere 42","province-state":"Ontario","country":"CA","postal-code":"K1J
+        1A6","PrimaryContactURI":"72327b34-26dc-11e3-a5b8-0401041e8a01","SecondaryContactURI":"726fe9f6-26dc-11e3-931c-0401041e8a01","ExecutiveContactURI":"72ad3266-26dc-11e3-a3d6-0401041e8a01","AdminAccount":{"UserName":"jmaltais111","ContactURI":"72327b34-26dc-11e3-a5b8-0401041e8a01","Password":"somestaticpasswd","AccessCode":"somestaticaccesscode"}}'
     headers:
       Content-Type:
       - application/json
@@ -119,7 +119,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Fri, 13 Sep 2013 14:45:01 GMT
+      - Thu, 26 Sep 2013 18:50:01 GMT
       Server:
       - Apache/2.2.15 (CentOS)
       Content-Length:
@@ -130,17 +130,15 @@ http_interactions:
       - text/html; charset=UTF-8
     body:
       encoding: US-ASCII
-      string: ! '{"MasasUUID": "11a490d0-1c83-11e3-927c-0401041e8a01"}'
+      string: ! '{"MasasUUID": "72eab096-26dc-11e3-a808-0401041e8a01"}'
     http_version: 
-  recorded_at: Fri, 13 Sep 2013 14:45:03 GMT
+  recorded_at: Thu, 26 Sep 2013 18:50:16 GMT
 - request:
     method: post
-    uri: https://ois.continuumloop.com/masas/organizations/
+    uri: https://ois.continuumloop.com/masas/contacts/
     body:
       encoding: UTF-8
-      string: ! '{"OrgName":"Awesome organization","address-line1":"Nowhere 42","province-state":"Ontario","country":"CA","postal-code":"K1J
-        1A6","PrimaryContactURI":"primary_uri","SecondaryContactURI":"secondary_uri","ExecutiveContactURI":"primary_uri","AdminAccount":{"UserName":"fthe
-        admin","ContactURI":"primary_uri","Password":"somestaticpasswd","AccessCode":"somestaticaccesscode"}}'
+      string: ! '{"firstName":"Jevin","lastName":"Maltais222","title":"President","language":"en","email":"email_7@example.com","office-phone":"613-265-5389"}'
     headers:
       Content-Type:
       - application/json
@@ -150,23 +148,123 @@ http_interactions:
       - Ruby
   response:
     status:
-      code: 409
-      message: Conflict
+      code: 200
+      message: OK
     headers:
       Date:
-      - Fri, 13 Sep 2013 14:45:01 GMT
+      - Thu, 26 Sep 2013 18:50:01 GMT
       Server:
       - Apache/2.2.15 (CentOS)
       Content-Length:
-      - '135'
+      - '53'
+      Connection:
+      - close
+      Content-Type:
+      - application/json
+    body:
+      encoding: US-ASCII
+      string: ! '{"MasasUUID": "733439b4-26dc-11e3-954e-0401041e8a01"}'
+    http_version: 
+  recorded_at: Thu, 26 Sep 2013 18:50:16 GMT
+- request:
+    method: post
+    uri: https://ois.continuumloop.com/masas/contacts/
+    body:
+      encoding: UTF-8
+      string: ! '{"firstName":"My","lastName":"Backup222","title":"President","language":"en","email":"email_8@example.com","office-phone":"613-265-5389"}'
+    headers:
+      Content-Type:
+      - application/json
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Thu, 26 Sep 2013 18:50:02 GMT
+      Server:
+      - Apache/2.2.15 (CentOS)
+      Content-Length:
+      - '53'
+      Connection:
+      - close
+      Content-Type:
+      - application/json
+    body:
+      encoding: US-ASCII
+      string: ! '{"MasasUUID": "73700d68-26dc-11e3-9c56-0401041e8a01"}'
+    http_version: 
+  recorded_at: Thu, 26 Sep 2013 18:50:17 GMT
+- request:
+    method: post
+    uri: https://ois.continuumloop.com/masas/organizations/
+    body:
+      encoding: UTF-8
+      string: ! '{"OrgName":"Awesome organization 222","address-line1":"Nowhere 42","province-state":"Ontario","country":"CA","postal-code":"K1J
+        1A6","PrimaryContactURI":"733439b4-26dc-11e3-954e-0401041e8a01","SecondaryContactURI":"73700d68-26dc-11e3-9c56-0401041e8a01","ExecutiveContactURI":"73700d68-26dc-11e3-9c56-0401041e8a01","AdminAccount":{"UserName":"jmaltais222","ContactURI":"733439b4-26dc-11e3-954e-0401041e8a01","Password":"somestaticpasswd","AccessCode":"somestaticaccesscode"}}'
+    headers:
+      Content-Type:
+      - application/json
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Thu, 26 Sep 2013 18:50:02 GMT
+      Server:
+      - Apache/2.2.15 (CentOS)
+      Content-Length:
+      - '53'
       Connection:
       - close
       Content-Type:
       - text/html; charset=UTF-8
     body:
       encoding: US-ASCII
-      string: The entry ou=Awesome organization,ou=organizations,dc=ois,dc=cloop,dc=co
-        cannot be added because an entry with that name already exists
+      string: ! '{"MasasUUID": "73abd532-26dc-11e3-9788-0401041e8a01"}'
     http_version: 
-  recorded_at: Fri, 13 Sep 2013 14:45:03 GMT
+  recorded_at: Thu, 26 Sep 2013 18:50:17 GMT
+- request:
+    method: post
+    uri: https://ois.continuumloop.com/masas/organizations/
+    body:
+      encoding: UTF-8
+      string: ! '{"OrgName":"Awesome organization 333","address-line1":"Nowhere 42","province-state":"Ontario","country":"CA","postal-code":"K1J
+        1A6","PrimaryContactURI":"someuuid","SecondaryContactURI":"someuuid","ExecutiveContactURI":"someuuid","AdminAccount":{"UserName":"ftheadmin333","ContactURI":"someuuid","Password":"somestaticpasswd","AccessCode":"somestaticaccesscode"}}'
+    headers:
+      Content-Type:
+      - application/json
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Thu, 26 Sep 2013 18:50:03 GMT
+      Server:
+      - Apache/2.2.15 (CentOS)
+      Content-Length:
+      - '53'
+      Connection:
+      - close
+      Content-Type:
+      - text/html; charset=UTF-8
+    body:
+      encoding: US-ASCII
+      string: ! '{"MasasUUID": "73fbd032-26dc-11e3-ad11-0401041e8a01"}'
+    http_version: 
+  recorded_at: Thu, 26 Sep 2013 18:50:18 GMT
 recorded_with: VCR 2.2.5
