--- a/spec/cassettes/organization.yml
+++ b/spec/cassettes/organization.yml
@@ -737,4 +737,190 @@ http_interactions:
         added because an entry with that name already exists
     http_version: 
   recorded_at: Thu, 10 Oct 2013 12:39:07 GMT
+- request:
+    method: delete
+    uri: https://ois.continuumloop.com/masas/contacts/e3524e6c-31a8-11e3-bc51-0401041e8a01
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Tue, 22 Oct 2013 15:10:21 GMT
+      Server:
+      - Apache/2.2.15 (CentOS)
+      Content-Length:
+      - '17'
+      Connection:
+      - close
+      Content-Type:
+      - application/json
+    body:
+      encoding: US-ASCII
+      string: ! '{"success": true}'
+    http_version: 
+  recorded_at: Tue, 22 Oct 2013 15:10:28 GMT
+- request:
+    method: delete
+    uri: https://ois.continuumloop.com/masas/contacts/e3a7e3e0-31a8-11e3-b463-0401041e8a01
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Tue, 22 Oct 2013 15:10:25 GMT
+      Server:
+      - Apache/2.2.15 (CentOS)
+      Content-Length:
+      - '17'
+      Connection:
+      - close
+      Content-Type:
+      - application/json
+    body:
+      encoding: US-ASCII
+      string: ! '{"success": true}'
+    http_version: 
+  recorded_at: Tue, 22 Oct 2013 15:10:33 GMT
+- request:
+    method: delete
+    uri: https://ois.continuumloop.com/masas/contacts/e3fef2d4-31a8-11e3-ac17-0401041e8a01
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Tue, 22 Oct 2013 15:10:27 GMT
+      Server:
+      - Apache/2.2.15 (CentOS)
+      Content-Length:
+      - '17'
+      Connection:
+      - close
+      Content-Type:
+      - application/json
+    body:
+      encoding: US-ASCII
+      string: ! '{"success": true}'
+    http_version: 
+  recorded_at: Tue, 22 Oct 2013 15:10:35 GMT
+- request:
+    method: delete
+    uri: https://ois.continuumloop.com/masas/contacts/f26ec5e2-31a8-11e3-95d5-0401041e8a01
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Tue, 22 Oct 2013 15:10:30 GMT
+      Server:
+      - Apache/2.2.15 (CentOS)
+      Content-Length:
+      - '17'
+      Connection:
+      - close
+      Content-Type:
+      - application/json
+    body:
+      encoding: US-ASCII
+      string: ! '{"success": true}'
+    http_version: 
+  recorded_at: Tue, 22 Oct 2013 15:10:37 GMT
+- request:
+    method: delete
+    uri: https://ois.continuumloop.com/masas/contacts/f2c51a64-31a8-11e3-bf61-0401041e8a01
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Tue, 22 Oct 2013 15:10:33 GMT
+      Server:
+      - Apache/2.2.15 (CentOS)
+      Content-Length:
+      - '17'
+      Connection:
+      - close
+      Content-Type:
+      - application/json
+    body:
+      encoding: US-ASCII
+      string: ! '{"success": true}'
+    http_version: 
+  recorded_at: Tue, 22 Oct 2013 15:10:40 GMT
+- request:
+    method: delete
+    uri: https://ois.continuumloop.com/masas/contacts/f2c51a64-31a8-11e3-bf61-0401041e8a01
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept:
+      - ! '*/*'
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Tue, 22 Oct 2013 15:10:37 GMT
+      Server:
+      - Apache/2.2.15 (CentOS)
+      Content-Length:
+      - '17'
+      Connection:
+      - close
+      Content-Type:
+      - application/json
+    body:
+      encoding: US-ASCII
+      string: ! '{"success": true}'
+    http_version: 
+  recorded_at: Tue, 22 Oct 2013 15:10:44 GMT
 recorded_with: VCR 2.2.5
